# AlphaPane

./: .env.example  .gitignore  CLAUDE.md  README.md  package-lock.json  package.json  pyproject.toml  requirements.txt  tsconfig.base.json
client/: index.html  package.json  tsconfig.json  vite.config.ts
client/src/: App.tsx  main.tsx  styles.css
pe_band_analyzer/: __init__.py  __main__.py  analyzer.py  constants.py  exceptions.py  models.py  visualization.py
pe_band_analyzer/api/: __init__.py  fmp.py  yahoo.py
pe_band_analyzer/core/: __init__.py  eps.py  pe_bands.py
server/: package.json  tsconfig.json  vitest.config.ts
server/src/: app.ts  bench-refresh.ts  cli.ts  config.ts  db.ts  dcf.test.ts  fiscalClient.ts  index.ts  math.test.ts  math.ts  node-sqlite.d.ts  refresh.test.ts  refresh.ts  repository.ts  stockPrice.ts  valuation.test.ts  valuation.ts
shared/: package.json  tsconfig.json
shared/src/: dcf.ts  index.ts
