[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vi-scanner"
version = "0.0.1"
description = "Value Investing Scanner - A suite of CLI tools for value investors (includes P/E Band Analysis)"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "VI-Scanner"}
]
keywords = [
    "finance",
    "investing",
    "value-investing",
    "stock-analysis",
    "pe-ratio",
    "valuation",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial :: Investment",
]
dependencies = [
    "requests>=2.28.0",
    "pandas>=1.5.0",
    "numpy>=1.23.0",
    "matplotlib>=3.6.0",
    "python-dotenv>=0.21.0",
]

[project.scripts]
vi-scanner = "pe_band_analyzer.__main__:main"

[project.urls]
Homepage = "https://github.com/VI-Scanner/vi-scanner"
Repository = "https://github.com/VI-Scanner/vi-scanner"

[tool.setuptools.packages.find]
where = ["."]
include = ["pe_band_analyzer*"]
